--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,41 +1,16 @@
-name: Deploy to EC2 via CodeDeploy
-
-on:
-  push:
-    branches: [ main ]
-
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Zip the code
-      run: zip -r myapp.zip .
-
-    - name: Upload to S3
-      uses: jakejarvis/s3-sync-action@master
-      with:
-        args: --acl private
-      env:
-        AWS_S3_BUCKET: your-s3-bucket
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: your-region
-        SOURCE_DIR: "./"
-        DEST_DIR: "myapp"
-
-    - name: Deploy using CodeDeploy
-      uses: webfactory/create-aws-codedeploy-deployment@v1
-      with:
-        application-name: MyApp
-        deployment-group: MyApp-Group
-        deployment-config-name: CodeDeployDefault.AllAtOnce
-        s3-bucket: your-s3-bucket
-        s3-key: myapp/myapp.zip
-        bundle-type: zip
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        region: your-region
+      - name: Create CodeDeploy deployment
+        uses: webfactory/create-aws-codedeploy-deployment@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: 'ap-south-1'  # Updated to your region
+          application-name: 'my-application'
+          deployment-group: 'my-deployment-group'
+          deployment-config: 'CodeDeployDefault.AllAtOnce'
